--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.ojdbc8.jar=C:\\Users\\Alan Schimpf\\Desktop\\Proyecto Candidato\\9-Reclutamiento-Vacante\\driver-conexion\\ojdbc8.jar
+file.reference.ojdbc8.jar=C:\\Users\\Alan Schimpf\\Desktop\\Proyecto Candidato\\10-Reclutamiento-BotonTablaCompleta\\driver-conexion\\ojdbc8.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
