--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Reclutamiento
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.6-javadoc.jar=libraries-md5\\commons-codec-1.6-javadoc.jar
+file.reference.commons-codec-1.6-sources.jar=libraries-md5\\commons-codec-1.6-sources.jar
+file.reference.commons-codec-1.6-tests.jar=libraries-md5\\commons-codec-1.6-tests.jar
+file.reference.commons-codec-1.6.jar=libraries-md5\\commons-codec-1.6.jar
 file.reference.ojdbc8.jar=..\\..\\..\\Downloads\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc8.jar}
+    ${file.reference.ojdbc8.jar}:\
+    ${file.reference.commons-codec-1.6-javadoc.jar}:\
+    ${file.reference.commons-codec-1.6-sources.jar}:\
+    ${file.reference.commons-codec-1.6-tests.jar}:\
+    ${file.reference.commons-codec-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
