--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.commons-codec-1.6-javadoc.jar=libraries-md5\\commons-codec-1.6-ja
 file.reference.commons-codec-1.6-sources.jar=libraries-md5\\commons-codec-1.6-sources.jar
 file.reference.commons-codec-1.6-tests.jar=libraries-md5\\commons-codec-1.6-tests.jar
 file.reference.commons-codec-1.6.jar=libraries-md5\\commons-codec-1.6.jar
+file.reference.itextpdf-5.5.13.3.jar=driver-PDF\\itextpdf-5.5.13.3.jar
 file.reference.ojdbc8.jar=..\\..\\..\\Downloads\\ojdbc8.jar
 includes=**
 jar.compress=false
@@ -47,7 +48,8 @@ javac.classpath=\
     ${file.reference.commons-codec-1.6-javadoc.jar}:\
     ${file.reference.commons-codec-1.6-sources.jar}:\
     ${file.reference.commons-codec-1.6-tests.jar}:\
-    ${file.reference.commons-codec-1.6.jar}
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.itextpdf-5.5.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
