The window to upload candidates with CSV files is added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.commons-codec-1.6-sources.jar=libraries-md5\\commons-codec-1.6-so
 file.reference.commons-codec-1.6-tests.jar=libraries-md5\\commons-codec-1.6-tests.jar
 file.reference.commons-codec-1.6.jar=libraries-md5\\commons-codec-1.6.jar
 file.reference.itextpdf-5.5.13.3.jar=driver-PDF\\itextpdf-5.5.13.3.jar
+file.reference.javacsv.jar=driver-CSV\\javacsv.jar
 file.reference.ojdbc8.jar=..\\..\\..\\Downloads\\ojdbc8.jar
 includes=**
 jar.compress=false
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.commons-codec-1.6-sources.jar}:\
     ${file.reference.commons-codec-1.6-tests.jar}:\
     ${file.reference.commons-codec-1.6.jar}:\
-    ${file.reference.itextpdf-5.5.13.3.jar}
+    ${file.reference.itextpdf-5.5.13.3.jar}:\
+    ${file.reference.javacsv.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +87,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Reclutamiento
-main.class=reclutamiento.AgregarCandidato
+main.class=reclutamiento.Inicio
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
